// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > Snapshot Tests > matches snapshot for checkbox with label 1`] = `
<div>
  <div>
    <button
      aria-checked="false"
      class="grid place-content-center peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
      data-state="unchecked"
      id="terms"
      role="checkbox"
      type="button"
      value="on"
    />
    <label
      for="terms"
    >
      Accept terms
    </label>
  </div>
</div>
`;

exports[`Checkbox > Snapshot Tests > matches snapshot for checked checkbox 1`] = `
<div>
  <button
    aria-checked="true"
    class="grid place-content-center peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="grid place-content-center text-current"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Checkbox > Snapshot Tests > matches snapshot for default checkbox 1`] = `
<div>
  <button
    aria-checked="false"
    class="grid place-content-center peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</div>
`;

exports[`Checkbox > Snapshot Tests > matches snapshot for disabled checkbox 1`] = `
<div>
  <button
    aria-checked="false"
    class="grid place-content-center peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  />
</div>
`;
